switch to windows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "SodaRacer2024 - Alunos.sln"
+    "dotnet.defaultSolution": "Projeto2-IIA.sln"
 }
